[tool.poetry]
name = "django-air"
version = "0.1.0"
description = ""
authors = ["vovinov <v.v.ovinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
django = "^5.0.6"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
django-countries = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
